final touches to recordKeep and started bovineGenomics